# dbscraper

./: Berlin Hbf_all.json  München Hbf.json  README.md  delay_sorted.json  delay_summary.json  koelle.json  koelle_arr.json  pyproject.toml
src/dbscraper/: .gitignore  __init__.py  converter.py  find_city.py  koeln.py  main.py  plot.py  sort_data.py
