[project]
name = "dbscraper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BrennenderMartin", email = "mattis2612@outlook.de" }
]
dependencies = [
    "matplotlib>=3.10.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python3 -m dbscraper.main"
converter = "python3 -m dbscraper.converter"
plot = "python3 -m dbscraper.plot"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dbscraper"]
